GH-42 fix(home-case-study): fix header alignment

--- a/src/css/pages/home.scss
+++ b/src/css/pages/home.scss
@@ -747,6 +747,13 @@
 }
 
 .case-studies {
+  h2 {
+    .tuf-header-br:first-child {
+      position: relative;
+      left: -30%;
+    }
+  }
+
   &__cta {
     position: relative;
 
